# PG_Trabalho_GB

./: .gitignore  MANUAL (COMO JOGAR).txt  README.md
PROJETO_PG_GB/: CMakeLists.txt  PROJETO_PG_GB.vcxproj  PROJETO_PG_GB.vcxproj.filters
PROJETO_PG_GB/header/: Car.h  Configurations.h  GameObject.h  SpriteSheet.h  TileClass.h  Tilemap.h  Transformations.h
PROJETO_PG_GB/resource/mapa/: tilemap_seasons.csv  tilemap_seasons.tmx  tileset_seasons.tsx  untitled.tmx
PROJETO_PG_GB/source/: main.cpp
